@@ -280,14 +280,17 @@ void free_soundfonts()
 {
 	SFInsts *sf, *next;
 	
-	for(sf = sfrecs; sf != NULL; sf = next){
-		if((sf->tf != NULL) && (sf->tf->url != NULL)) free(sf->tf->url);
-		if(sf->tf != NULL)free(sf->tf);
-		reuse_mblock( & sf->pool);
+	for (sf = sfrecs; sf != NULL; sf = next) {
+		if ((sf->tf != NULL) && (sf->tf->url != NULL))
+			free(sf->tf->url);
+		if (sf->tf != NULL)
+			free(sf->tf);
+		reuse_mblock(&sf->pool);
 		next = sf->next;
-		free (sf);
+		free(sf);
 	}
 }
+
 char *soundfont_preset_name(int bank, int preset, int keynote,
 			    char **sndfile)
 {
@@ -345,7 +348,7 @@ static void init_sf(SFInsts *rec)
 
 		if (bank == 128)
 		    /* FIXME: why not allow exclusion of drumsets? */
-			alloc_instrument_bank(1, preset);
+		    alloc_instrument_bank(1, preset);
 		else {
 			if (is_excluded(rec, bank, preset, -1))
 				continue;
